--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,53 +1,41 @@
-name: Pages
- 
+
+name: Deploy Hexo to GitHub Pages
+
 on:
   push:
     branches:
-      - main # 我们设置的分支是 gh-pages
- 
+      - main  # 每当 main 分支有 push 时触发部署
+
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          token: ${{ secrets.DEPLOY_TOKEN }}
-          # If your repository depends on submodule, please see: https://github.com/actions/checkout
-          submodules: false
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
-        with:
-          # Examples: 20, 18.19, >=16.20.2, lts/Iron, lts/Hydrogen, *, latest, current, node
-          # Ref: https://github.com/actions/setup-node#supported-version-syntax
-          node-version: "20.11.1"
-      - name: Cache NPM dependencies
-        uses: actions/cache@v4
+          node-version: '18'
+
+      - name: Cache node modules
+        uses: actions/cache@v3
         with:
           path: node_modules
-          key: ${{ runner.OS }}-npm-cache
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-npm-cache
-      - name: Install Dependencies
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
         run: npm install
-      - name: Fix permissions
-        run: |
-          sudo chmod -R 755 node_modules  # 给 node_modules 目录及其中的文件设置权限
-      - name: Build
-        run: npm run build
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./public
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
+
+      - name: Generate static files
+        run: npx hexo generate
+
       - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.DEPLOY_TOKEN }}
+          publish_dir: ./public
+          publish_branch: gh-pages  # 默认部署到 gh-pages 分支
