--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -29,7 +29,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-
+      - name: Fix permissions
+        run: |
+          sudo chmod -R 755 node_modules  # 给 node_modules 目录及其中的文件设置权限
+      - name: Build
       - name: Generate static files
         run: npx hexo generate
 
