--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,8 +34,11 @@ jobs:
         run: |
           sudo chmod -R 755 node_modules  # 给 node_modules 目录及其中的文件设置权限
 
+      - name: Clean Hexo cache
+        run: npx hexo clean  # 执行 hexo clean 清理缓存
+
       - name: Generate static files
-        run: npx hexo generate
+        run: npx hexo generate  # 执行 hexo generate 生成静态文件
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
